--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -7,3 +7,7 @@
          hover:bg-blue-700 active:opacity-80
          focus:outline-none focus:ring-2 focus:ring-blue-400;
 }
+
+.component-panel {
+  @apply border-2 p-2 mt-4 mb-4
+}
